--- a/components/links/links.html
+++ b/components/links/links.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Style Wiz - {{ component-name }}</title>
+    <title>Style Wiz - Links</title>
 
     <link rel="stylesheet" type="text/css" href="common/normalize.css">
     <link rel="stylesheet" type="text/css" href="common/main.css">
@@ -11,7 +11,7 @@
 <body>
 
   <div>
-    <h2>{{ component-name }}</h2>
+    <h2>Links</h2>
     <ul>
       <li><a href="/">Back</a></li>
     </ul>
