Fixes some paths

--- a/components/heading/heading.html
+++ b/components/heading/heading.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Style Wiz - Headings</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/normalize.css">
-    <link rel="stylesheet" type="text/css" href="assets/main.css">
+    <link rel="stylesheet" type="text/css" href="common/normalize.css">
+    <link rel="stylesheet" type="text/css" href="common/main.css">
 </head>
 <body>
 
