--- a/components/heading/heading.less
+++ b/components/heading/heading.less
@@ -1,21 +1,21 @@
 @font-face {
   font-family: 'RamaGothicE';
-  src:  url('../common/fonts/RamaGothicE_SemiBold-webfont.woff') format('woff');
+  src:  url('../assets/fonts/RamaGothicE_SemiBold-webfont.woff') format('woff');
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Arial Bold', sans-serif;
-  color: #54565B;
+  color: @dark-grey;
   margin: 0;
 }
 
 .alt-heading {
   font-family: 'RamaGothicE', Arial, sans-serif;
-  color: #91c717;
+  color: @light-green;
 }
 
 .alt-heading--green {
-  color: #91c717;
+  color: @light-green;
 }
 
 h1 {
